[gd_scene load_steps=8 format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" uid="uid://bdnov7ebjc7i4" path="res://scripts/player.gd" id="1_ffboj"]
[ext_resource type="Script" uid="uid://dt62tx7ms0woq" path="res://scripts/dialog.gd" id="2_1txc5"]
[ext_resource type="FontFile" uid="uid://cf4ck4emg5py2" path="res://fonts/BoldPixels.ttf" id="2_r66lb"]
[ext_resource type="PackedScene" uid="uid://cw5biv6cyubha" path="res://prefabs/key_a_mesh.tscn" id="3_ht1c8"]
[ext_resource type="PackedScene" uid="uid://bxn36lea81t6t" path="res://prefabs/key_b_mesh.tscn" id="4_u51tk"]
[ext_resource type="AudioStream" uid="uid://cydjn1ct3hps2" path="res://sounds/walking.ogg" id="5_ics1s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.3
height = 1.0

[node name="player" type="CharacterBody3D" node_paths=PackedStringArray("key_a", "key_b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_ffboj")
key_a = NodePath("Head/Camera/SubViewportContainer/SubViewport/CameraItem/hand_container/key_a_mesh")
key_b = NodePath("Head/Camera/SubViewportContainer/SubViewport/CameraItem/hand_container/key_b_mesh")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="dialog" type="Node3D" parent="." node_paths=PackedStringArray("text_panel", "text")]
script = ExtResource("2_1txc5")
text_panel = NodePath("../Head/Camera/SubViewportContainer/SubViewport/sub_ui/text_margin_outer/text_panel")
text = NodePath("../Head/Camera/SubViewportContainer/SubViewport/sub_ui/text_margin_outer/text_panel/text_margin/text")

[node name="cooldown" type="Timer" parent="dialog"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera" type="Camera3D" parent="Head"]
cull_mask = 1048573
current = true
fov = 80.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/Camera/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="CameraItem" type="Camera3D" parent="Head/Camera/SubViewportContainer/SubViewport"]
cull_mask = 1047554
fov = 40.0

[node name="hand_container" type="Node3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.09579, -0.592816, -1.96141)

[node name="key_a_mesh" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem/hand_container" instance=ExtResource("3_ht1c8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.446353, 0.756308, -0.536281)

[node name="mesh" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem/hand_container/key_a_mesh" index="0"]
layers = 2

[node name="Label3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem/hand_container/key_a_mesh" index="1"]
layers = 2

[node name="key_b_mesh" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem/hand_container" instance=ExtResource("4_u51tk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0618457, 0.756308, -0.536281)

[node name="mesh" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem/hand_container/key_b_mesh" index="0"]
layers = 2

[node name="Label3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem/hand_container/key_b_mesh" index="1"]
layers = 2

[node name="sub_ui" type="Control" parent="Head/Camera/SubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="text_margin_outer" type="MarginContainer" parent="Head/Camera/SubViewportContainer/SubViewport/sub_ui"]
custom_minimum_size = Vector2(600, 170)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 50

[node name="text_panel" type="Panel" parent="Head/Camera/SubViewportContainer/SubViewport/sub_ui/text_margin_outer"]
layout_mode = 2

[node name="text_margin" type="MarginContainer" parent="Head/Camera/SubViewportContainer/SubViewport/sub_ui/text_margin_outer/text_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="text" type="RichTextLabel" parent="Head/Camera/SubViewportContainer/SubViewport/sub_ui/text_margin_outer/text_panel/text_margin"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_r66lb")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "te[color=#FFFFFF00]st"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RayCast" type="RayCast3D" parent="Head/Camera"]
exclude_parent = false
target_position = Vector3(0, 0, -2)
collide_with_areas = true

[node name="SoundFootsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ics1s")
volume_db = -5.0
autoplay = true

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[editable path="Head/Camera/SubViewportContainer/SubViewport/CameraItem/hand_container/key_a_mesh"]
[editable path="Head/Camera/SubViewportContainer/SubViewport/CameraItem/hand_container/key_b_mesh"]
